--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,11 @@ jobs:
     outputs:
       tagName: ${{ steps.tagName.outputs.tag }}
     steps:
-      - uses: olegtarasov/get-tag@v2.1 # get the tag name from the ref.
+      - uses: olegtarasov/get-tag@14deb5cb39a98e81adb64f8ac8b27aefab278784 # get the tag name from the ref. v2.1.2 https://github.com/olegtarasov/get-tag/releases/tag/v2.1.2
         id: tagName
       # This creates an empty release on the tag with just the header.
       - name: Release ${{ matrix.board }}
-        uses: softprops/action-gh-release@v1
+        uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # Originally: softprops/action-gh-release@v1; now https://github.com/koplo199/action-gh-release/commit/9d20ca8394b8a9b286119684e885f8fc2cfc3baa
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
           body: |
@@ -449,7 +449,7 @@ jobs:
     steps:
 
       - name: Checkout this (release) repo into release dir
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: release
 
@@ -464,7 +464,7 @@ jobs:
             bash --noprofile --norc -e release/cleanup.sh
 
       - name: Checkout build repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           repository: ${{ github.repository_owner }}/armbian-build
           ref: extensions # branch to build from.
@@ -511,7 +511,7 @@ jobs:
 
       - name: Release ${{ matrix.board }}
         id: release
-        uses: softprops/action-gh-release@2d72d869af3bf23602f9593a1e3fd739b80ac1eb # which is v0.1.12, concat release bodies. # @v1 is a moving target
+        uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # was softprops/action-gh-release@2d72d869af3bf23602f9593a1e3fd739b80ac1eb # which is v0.1.12, concat release bodies. # @v1 is a moving target
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
           body_path: build/output/release.md # created by prepare_release.sh
@@ -519,7 +519,7 @@ jobs:
             build/output/images/*.xz
 
       - name: Upload logs as artifact ${{ matrix.board }}
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: build-logs
           path: build/output/images/build.logs.*.xz
