--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
         uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # Originally: softprops/action-gh-release@v1; now https://github.com/koplo199/action-gh-release/commit/9d20ca8394b8a9b286119684e885f8fc2cfc3baa
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
+          append_body: false # don't append to the release body; this is the first.
           body: |
             ### Release ${{ steps.tagName.outputs.tag }}
 
@@ -514,15 +515,10 @@ jobs:
         uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # was softprops/action-gh-release@2d72d869af3bf23602f9593a1e3fd739b80ac1eb # which is v0.1.12, concat release bodies. # @v1 is a moving target
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
+          append_body: true # append to existing release body
           body_path: build/output/release.md # created by prepare_release.sh
           files: |
             build/output/images/*.xz
-
-      - name: Upload logs as artifact ${{ matrix.board }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-logs
-          path: build/output/images/build.logs.*.xz
 
       - name: Finish build with status
         run: |
