--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -250,7 +250,14 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf,build-machine-image OVF_KEEP_IMG=yes BRANCH=edge"
 
-          - aa: 0320
+          - aa: 0322
+            board: uefi-x86
+            desc: VMWare x86 UEFI Builder Virtual Machine, with Armbian mainline kernel (edge), desktop Gnome
+            runnerLabel: can-build-x86
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf,build-machine-image OVF_KEEP_IMG=yes BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=browsers DESKTOP_ENVIRONMENT=gnome DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
+          - aa: 0324
             board: uefi-x86
             desc: UTM 3.x x86 UEFI Builder Virtual Machine, with Armbian mainline kernel (edge), regular CLI
             runnerLabel: can-build-x86 # light image with kernel, UTM image, low usage, good cross compile candidate
