--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         id: tagName
       # This creates an empty release on the tag with just the header.
       - name: Release ${{ matrix.board }}
-        uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # Originally: softprops/action-gh-release@v1; now https://github.com/koplo199/action-gh-release/commit/9d20ca8394b8a9b286119684e885f8fc2cfc3baa
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
           append_body: false # don't append to the release body; this is the first.
@@ -530,7 +530,7 @@ jobs:
 
       - name: Release ${{ matrix.board }}
         id: release
-        uses: koplo199/action-gh-release@9d20ca8394b8a9b286119684e885f8fc2cfc3baa # was softprops/action-gh-release@2d72d869af3bf23602f9593a1e3fd739b80ac1eb # which is v0.1.12, concat release bodies. # @v1 is a moving target
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
         with:
           append_body: true # append to existing release body
