--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -536,9 +536,20 @@ jobs:
             "${{ matrix.board }}" "${{ matrix.vars }}"
 
       - name: Release ${{ matrix.board }}
-        id: release
+        id: release1
+        continue-on-error: true
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         if: startsWith(github.ref, 'refs/tags/') # only for tags. GitHub requires tags for releases.
+        with:
+          append_body: true # append to existing release body
+          body_path: build/output/release.md # created by prepare_release.sh
+          files: |
+            build/output/images/*.xz
+
+      - name: Release ${{ matrix.board }} (retry if 1st failed)
+        id: release2
+        if: steps.release1.outcome == 'failure'
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         with:
           append_body: true # append to existing release body
           body_path: build/output/release.md # created by prepare_release.sh
