--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -245,6 +245,12 @@ jobs:
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0715
+            board: orangepi5
+            desc: orangepi5, legacy (5.10), cli
+            runnerLabel: armbian-arm64-rock5b
+            vars: "CLOUD_IMAGE=no BRANCH=legacy"
+
+          - aa: 0720
             board: rock-5b
             desc: rock-5b, legacy (5.10), gnome desktop
             runnerLabel: armbian-arm64-rock5b
