--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,12 @@ jobs:
             runnerLabel: armbian-arm64-rockchip-rk3588
             vars: "CLOUD_IMAGE=no BRANCH=legacy"
 
+          - aa: 0002
+            board: orangepi5
+            desc: orangepi5, legacy (5.10), Gnome Jammy desktop
+            runnerLabel: armbian-arm64-rockchip-rk3588
+            vars: "CLOUD_IMAGE=no BRANCH=legacy RELEASE=jammy BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=none DESKTOP_ENVIRONMENT=gnome DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+
           - aa: 0010
             board: uefi-arm64
             desc: UEFI Generic ARM64 Rescue e2img, ddk, cloud image, user-data at /boot, *always Jammy*
