--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,16 +44,16 @@ jobs:
           # 0500+ other stuff
 
           - aa: 0001
-            board: orangepi5
-            desc: orangepi5, legacy (5.10), cli
-            runnerLabel: armbian-arm64-rockchip-rk3588
-            vars: "CLOUD_IMAGE=no BRANCH=legacy"
+            board: tritium-h3
+            desc: tritium-h3, edge, cli
+            runnerLabel: armbian-armhf-sunxi
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0002
-            board: orangepi5
-            desc: orangepi5, legacy (5.10), Gnome Jammy desktop
-            runnerLabel: armbian-arm64-rockchip-rk3588
-            vars: "CLOUD_IMAGE=no BRANCH=legacy RELEASE=jammy BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=none DESKTOP_ENVIRONMENT=gnome DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
+            board: tritium-h5
+            desc: tritium-h5, edge, cli
+            runnerLabel: armbian-armhf-sunxi64
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0010
             board: uefi-arm64
@@ -261,6 +261,13 @@ jobs:
             desc: rock-5b, legacy (5.10), cli
             runnerLabel: armbian-arm64-rockchip-rk3588
             vars: "CLOUD_IMAGE=no BRANCH=legacy"
+
+          - aa: 0725
+            board: orangepi5
+            desc: orangepi5, legacy (5.10), cli
+            runnerLabel: armbian-arm64-rockchip-rk3588
+            vars: "CLOUD_IMAGE=no BRANCH=legacy"
+
 
           # RPI4b, edge
           - aa: 0805
