--- a/.github/workflows/main-to-docker-latest.yml
+++ b/.github/workflows/main-to-docker-latest.yml
@@ -1,8 +1,8 @@
 name: main-to-docker-latest
 
 on:
-  push:
-    branches: [ main ]
+  #push:
+  #  branches: [ main ]
   schedule:
     - cron: '0 3 * * *' # Scheduled runs every day at 3am UTC
 
